--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,21 +1,20 @@
-<div id="login" fxLayout="column" >
+<mat-toolbar class="toolbar">PROJECT NAME</mat-toolbar>
+<div id="login" fxLayout="column">
 
     <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
         <div id="login-form">
 
-            <div  >
-                <img class="logo" src="assets/img/bi-logo-with-tagline.svg">
-            </div>
 
-            <div class="mat-subheading-1 secondary-text">Welcome to the Brand Matrix </div>
+            <img class="logo" src="assets/img/bi-logo-with-tagline.svg">
 
-            <form name="loginForm" [formGroup]="loginForm" novalidate
-                class="open-close-container">
+            <div class="mat-subheading-1 secondary-text">Welcome to the NW </div>
+
+            <form name="loginForm" [formGroup]="loginForm" novalidate class="open-close-container">
 
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input matInput placeholder="Email" formControlName="email" >
+                    <input matInput placeholder="Email" formControlName="email">
                     <mat-error *ngIf="loginForm.get('email').hasError('required')">
                         Email is required
                     </mat-error>
@@ -26,40 +25,41 @@
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
-                    <input matInput type="password" placeholder="Password" formControlName="password" >
+                    <mat-label>Name</mat-label>
+                    <input matInput type="name" placeholder="name" formControlName="name">
                     <mat-error>
-                        Password is required
+                        name is required
                     </mat-error>
                 </mat-form-field>
-                
+
                 <mat-error *ngIf="false">
                     Username or password incorrect or not register
                 </mat-error>
 
-                <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-                    <!-- <mat-checkbox class="remember-me secondary-text" aria-label="Remember Me">
-                        Remember Me
-                    </mat-checkbox> -->
+                <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column"
+                    fxLayoutAlign="space-between center">
+                    <mat-checkbox class="remember-me secondary-text" aria-label="Remember Me">
+                        Summarize your input once finished?
+                    </mat-checkbox>
 
-                    <a class="forgot-password" [routerLink]="'/apps/login/forgot-password'">
+                    <!-- <a class="forgot-password" [routerLink]="'/apps/login/forgot-password'">
                         Forgot Password?
-                    </a>
+                    </a> -->
                 </div>
 
-                <button mat-raised-button color="accent"  class="submit-button" aria-label="LOG IN"
+                <button mat-raised-button style="color: white;" color="primary" class="submit-button" aria-label="LOG IN"
                     [disabled]="loginForm.invalid">
-                    LOGIN
+                    SUBMIT
                 </button>
 
             </form>
 
-            <div class="register" fxLayout="column" fxLayoutAlign="center center">
+            <!-- <div class="register" fxLayout="column" fxLayoutAlign="center center">
                 <span class="text secondary-text">Don't have an account?</span>
                 <a class="link" [routerLink]="'/apps/register/auth/register'">Create an account</a>
                 <a class="link" [routerLink]="'/apps/contacts'">Contact us</a>
-            </div>
-         
+            </div> -->
+
         </div>
 
     </div>
