--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -1,82 +1,166 @@
+<mat-toolbar class="toolbar mat-elevation-z2">PROJECT NAME</mat-toolbar>
 
-<section class="text-center" style="padding-top: 80px;">
 
-    <h1>{{name}}</h1>
 
-</section>
-<hr>
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+
+            <section class="text-center " style="padding: 35px 0px 31px 0px;">
+
+                <h1>{{name}}</h1>
+                <hr>
+
+            </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-12">
+                    <section class="text-center " style="padding: 40px 0px 31px 0px;">
+
+                        <button *ngIf="!positiveVote" (click)="setPositive()" type="button"
+                            class="btn btn-outline-primary btn-lg mat-elevation-z8" style="color:#1b5e20;width: 260px;border-color: #1b5e20; ">
+                            POSITITVE
+                        </button>
+                        <button *ngIf="positiveVote" (click)="setPositive()" type="button"
+                            class="btn btn-lg mat-elevation-z2 "
+                            style="background-color: #1b5e20;color: white;width: 260px;">
+                            POSITITVE
+                        </button>
+
+                    </section>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <section class="text-center " style="padding: 40px 0px 31px 0px;">
+
+                        <button *ngIf="!neutralVote" (click)="setNeutral()" type="button"
+                            class="btn btn-outline-primary btn-lg mat-elevation-z8" style="color:#0d47a1;width: 260px;border-color: #0d47a1;  ">
+                            NEUTRAL
+                        </button>
+                        <button *ngIf="neutralVote" (click)="setNeutral()" type="button"
+                            class="btn btn-lg mat-elevation-z2"
+                            style="background-color: #0d47a1;color: white;width: 260px;">
+                            NEUTRAL
+                        </button>
+
+                    </section>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <section class="text-center " style="padding: 40px 0px 31px 0px;">
+
+                        <button *ngIf="!negativeVote" (click)="setNegative()" type="button"
+                            class="btn btn-outline-primary btn-lg mat-elevation-z8" style="color:#b71c1c;width: 260px;border-color: #b71c1c; ">
+                            NEGATIVE
+                        </button>
+                        <button *ngIf="negativeVote" (click)="setNegative()" type="button"
+                            class="btn btn-lg mat-elevation-z2"
+                            style="background-color: #b71c1c;color: white;width: 260px;">
+                            NEGATIVE
+                        </button>
+
+                    </section>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="progress mat-elevation-z2" style="margin-top: 100px;">
+                <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="bg-light">
     <div class="container">
         <div class="row">
-            
-            <div class="col-md-4 text-center" style="position: absolute;bottom: 294px;">
-                <div *ngIf="!positiveVote" (click)="setPositive()"  class="card mb-4 shadow-sm" >
-                    <div matRipple class="card-body">
+
+            <!-- <div class="col-md-4 text-center" style="position: absolute;bottom: 294px;">
+                <div *ngIf="!positiveVote" (click)="setPositive()" style="width: 316px;" class="card mb-4 shadow-sm">
+                    <div matRipple class="card-body mat-elevation-z8">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="#" class=" my-2">Positive</a>
+                                    <span class=" my-2" style="color: #004684;font-size: 37px;">POSITIVE</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div *ngIf="positiveVote"  (click)="setPositive()" class="card mb-4 shadow-sm" style="background-color: blue;">
-                    <div matRipple class="card-body">
+                <div *ngIf="positiveVote" (click)="setPositive()" style="width: 316px;" class="card mb-4 shadow-sm"
+                    style="background-color: #1b5e20;">
+                    <div matRipple class="card-body mat-elevation-z8">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="#" class=" my-2" style="color: white;">Positive</a>
+                                    <span class=" my-2" style="color: white;font-size: 37px;">POSITIVE</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div *ngIf="!neutralVote" (click)="setNeutral()"  class="card mb-4 shadow-sm" >
-                    <div matRipple class="card-body">
+                <div *ngIf="!neutralVote" (click)="setNeutral()" style="width: 316px;" class="card mb-4 shadow-sm">
+                    <div matRipple class="card-body mat-elevation-z8">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="#" class=" my-2">Neutral</a>
+                                    <span class=" my-2" style="color: #004684;font-size: 30px;">NEUTRAL</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div *ngIf="neutralVote"  (click)="setNeutral()" class="card mb-4 shadow-sm" style="background-color: blue;">
-                    <div matRipple class="card-body">
+                <div *ngIf="neutralVote" (click)="setNeutral()" style="width: 316px;" class="card mb-4 shadow-sm"
+                    style="background-color: #004684;">
+                    <div matRipple class="card-body mat-elevation-z2">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="#" class=" my-2" style="color: white;">Neutral</a>
+                                    <span class=" my-2" style="color: white;font-size: 30px;">NEUTRAL</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div *ngIf="!negativeVote" (click)="setNegative()"  class="card mb-4 shadow-sm" >
-                    <div matRipple class="card-body">
+                <div *ngIf="!negativeVote" (click)="setNegative()" style="width: 316px;" class="card mb-4 shadow-sm">
+                    <div matRipple class="card-body mat-elevation-z8">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="#" class=" my-2">Negative</a>
+                                    <span class=" my-2" style="color: #004684;font-size: 25px;"> NEGATIVE</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div *ngIf="negativeVote"  (click)="setNegative()" class="card mb-4 shadow-sm" style="background-color: blue;">
-                    <div matRipple class="card-body">
+                <div *ngIf="negativeVote" (click)="setNegative()" style="width: 316px;" class="card mb-4 shadow-sm"
+                    style="background-color: #b71c1c;">
+                    <div matRipple class="card-body mat-elevation-z8">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="#" class=" my-2" style="color: white;">Negative</a>
+                                    <span class=" my-2" style="color: white;font-size: 25px;">NEGATIVE</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
@@ -87,14 +171,20 @@
     <div class="no-gutters">
         <div class="col-auto mx-auto">
             <div class="row no-gutters justify-content-center">
-                <div class="col-6">
+                <div class="col-4">
                     <span class="btn btn-link-default">
                         <i class="material-icons" style="font-size: 40px">
                             arrow_left
                         </i>
                     </span>
                 </div>
-                <div class="col-6">
+                <div class="col-4">
+                    <span class="btn btn-link-default">
+
+                        <button mat-fab color="#fff" style="color: #004684;outline: none;position: absolute;bottom: 20px;">GO!</button>
+                    </span>
+                </div>
+                <div class="col-4">
                     <span style="float: right;" class="btn btn-link-default">
                         <i class="material-icons" style="font-size: 40px; padding-right: 50px;">
                             arrow_right
@@ -104,13 +194,12 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>-->
+<!-- <section style="padding-top: 480px;">
 
+    <div class="progress mat-elevation-z2" style="    margin: 10px;">
+        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
+            aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
 
-<section  style="padding-top: 480px;">
-
-    <div class="progress" style="    margin: 10px;">
-        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-
-</section>
+</section> -->
