--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -20,10 +20,10 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-12">
-                    <section class="text-center " style="padding: 40px 0px 31px 0px;">
+                    <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
                         <button *ngIf="!positiveVote" (click)="setPositive()" type="button"
-                            class="btn btn-outline-primary btn-lg mat-elevation-z8" style="color:#1b5e20;width: 260px;border-color: #1b5e20; ">
+                            class="btn btn-outline-success btn-lg mat-elevation-z8" style="color:#1b5e20;width: 260px;border-color: #1b5e20; ">
                             POSITITVE
                         </button>
                         <button *ngIf="positiveVote" (click)="setPositive()" type="button"
@@ -38,7 +38,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <section class="text-center " style="padding: 40px 0px 31px 0px;">
+                    <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
                         <button *ngIf="!neutralVote" (click)="setNeutral()" type="button"
                             class="btn btn-outline-primary btn-lg mat-elevation-z8" style="color:#0d47a1;width: 260px;border-color: #0d47a1;  ">
@@ -56,10 +56,10 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <section class="text-center " style="padding: 40px 0px 31px 0px;">
+                    <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
                         <button *ngIf="!negativeVote" (click)="setNegative()" type="button"
-                            class="btn btn-outline-primary btn-lg mat-elevation-z8" style="color:#b71c1c;width: 260px;border-color: #b71c1c; ">
+                            class="btn btn-outline-danger btn-lg mat-elevation-z8" style="color:#b71c1c;width: 260px;border-color: #b71c1c; ">
                             NEGATIVE
                         </button>
                         <button *ngIf="negativeVote" (click)="setNegative()" type="button"
@@ -74,9 +74,9 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="progress mat-elevation-z2" style="margin-top: 100px;">
+    <div class="row" fxLayoutAlign="center center">
+        <div class="col-md-12" >
+            <div  class="progress mat-elevation-z2" style="margin-top: 50px;max-width: 500px;">
                 <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
                     aria-valuemin="0" aria-valuemax="100"></div>
             </div>
