--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbar">PROJECT NAME</mat-toolbar>
+<mat-toolbar class="toolbar">{{projectname}}</mat-toolbar>
 <div id="login" fxLayout="column">
 
     <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
@@ -38,7 +38,7 @@
 
                 <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column"
                     fxLayoutAlign="space-between center">
-                    <mat-checkbox class="remember-me secondary-text" aria-label="Remember Me">
+                    <mat-checkbox matInput  formControlName="suma" class="remember-me secondary-text" aria-label="Remember Me">
                         Summarize your input once finished?
                     </mat-checkbox>
 
@@ -47,7 +47,7 @@
                     </a> -->
                 </div>
 
-                <button mat-raised-button style="color: white;" color="primary" class="submit-button" aria-label="LOG IN"
+                <button (click)="submitCredentials()" mat-raised-button style="color: white;" color="primary" class="submit-button" aria-label="LOG IN"
                     [disabled]="loginForm.invalid">
                     SUBMIT
                 </button>
