--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -74,9 +74,9 @@
             </div>
         </div>
     </div>
-    <div class="row" fxLayoutAlign="center center">
-        <div class="col-md-12" >
-            <div  class="progress mat-elevation-z2" style="margin-top: 50px;max-width: 500px;">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="progress mat-elevation-z2" style="margin-top: 50px;">
                 <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
                     aria-valuemin="0" aria-valuemax="100"></div>
             </div>
