--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -77,129 +77,10 @@
     <div class="row">
         <div class="col-md-12">
             <div class="progress mat-elevation-z2" style="margin-top: 50px;">
-                <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
+                <div class="progress-bar bg-info" role="progressbar" [style]="progressBarCompletion" aria-valuenow="50"
                     aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
     </div>
 </div>
 
-
-
-<div class="bg-light">
-    <div class="container">
-        <div class="row">
-
-            <!-- <div class="col-md-4 text-center" style="position: absolute;bottom: 294px;">
-                <div *ngIf="!positiveVote" (click)="setPositive()" style="width: 316px;" class="card mb-4 shadow-sm">
-                    <div matRipple class="card-body mat-elevation-z8">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <span class=" my-2" style="color: #004684;font-size: 37px;">POSITIVE</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div *ngIf="positiveVote" (click)="setPositive()" style="width: 316px;" class="card mb-4 shadow-sm"
-                    style="background-color: #1b5e20;">
-                    <div matRipple class="card-body mat-elevation-z8">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <span class=" my-2" style="color: white;font-size: 37px;">POSITIVE</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div *ngIf="!neutralVote" (click)="setNeutral()" style="width: 316px;" class="card mb-4 shadow-sm">
-                    <div matRipple class="card-body mat-elevation-z8">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <span class=" my-2" style="color: #004684;font-size: 30px;">NEUTRAL</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div *ngIf="neutralVote" (click)="setNeutral()" style="width: 316px;" class="card mb-4 shadow-sm"
-                    style="background-color: #004684;">
-                    <div matRipple class="card-body mat-elevation-z2">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <span class=" my-2" style="color: white;font-size: 30px;">NEUTRAL</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div *ngIf="!negativeVote" (click)="setNegative()" style="width: 316px;" class="card mb-4 shadow-sm">
-                    <div matRipple class="card-body mat-elevation-z8">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <span class=" my-2" style="color: #004684;font-size: 25px;"> NEGATIVE</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div *ngIf="negativeVote" (click)="setNegative()" style="width: 316px;" class="card mb-4 shadow-sm"
-                    style="background-color: #b71c1c;">
-                    <div matRipple class="card-body mat-elevation-z8">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <span class=" my-2" style="color: white;font-size: 25px;">NEGATIVE</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        </div>
-    </div>
-</div>
-
-
-<!-- 
-<div class="footer">
-    <div class="no-gutters">
-        <div class="col-auto mx-auto">
-            <div class="row no-gutters justify-content-center">
-                <div class="col-4">
-                    <span class="btn btn-link-default">
-                        <i class="material-icons" style="font-size: 40px">
-                            arrow_left
-                        </i>
-                    </span>
-                </div>
-                <div class="col-4">
-                    <span class="btn btn-link-default">
-
-                        <button mat-fab color="#fff" style="color: #004684;outline: none;position: absolute;bottom: 20px;">GO!</button>
-                    </span>
-                </div>
-                <div class="col-4">
-                    <span style="float: right;" class="btn btn-link-default">
-                        <i class="material-icons" style="font-size: 40px; padding-right: 50px;">
-                            arrow_right
-                        </i>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>-->
-<!-- <section style="padding-top: 480px;">
-
-    <div class="progress mat-elevation-z2" style="    margin: 10px;">
-        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
-            aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-
-</section> -->
