--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -78,7 +78,7 @@
         <div class="col-md-12">
             <div class="progress mat-elevation-z2" style="margin-top: 50px;">
                 <div class="progress-bar bg-info" role="progressbar" [style]="progressBarCompletion" aria-valuenow="50"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                    aria-valuemin="0" aria-valuemax="100">{{progressBarValue}}%</div>
             </div>
         </div>
     </div>
