--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -10,7 +10,7 @@
 
             <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
-                <h1>{{name}}</h1>
+                <h1 style="font-size: 40px;">{{name}}</h1>
                 <hr>
 
             </section>
