--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbar mat-elevation-z2">{{projectName}}</mat-toolbar>
+<mat-toolbar class="toolbar mat-elevation-z2">{{projectName}}-v0.1</mat-toolbar>
 
 
 
@@ -24,17 +24,17 @@
 
                         <button *ngIf="!positiveVote && !readOnlyName && name !== '....'" (click)="setPositive()" type="button"
                             class="btn btn-outline-success btn-lg mat-elevation-z8" style="color:#1b5e20;width: 260px;border-color: #1b5e20; ">
-                            POSITITVE
+                            POSITIVE
                         </button>
                         <button *ngIf="positiveVote && !readOnlyName && name !== '....'" (click)="setPositive()" type="button"
                             class="btn btn-lg mat-elevation-z2 "
                             style="background-color: #1b5e20;color: white;width: 260px;">
-                            POSITITVE
+                            POSITIVE
                         </button>
                         <button *ngIf="readOnlyName || name === '....'" (click)="setPositive()" type="button"
                             class="btn btn-lg mat-elevation-z2 "
                             style="color:grey;width: 260px;">
-                            POSITITVE
+                            POSITIVE
                         </button>
 
                     </section>
