--- a/src/app/nw-vote/nw-vote.component.scss
+++ b/src/app/nw-vote/nw-vote.component.scss
@@ -70,3 +70,8 @@
   line-height: 20px !important;
   outline: none !important;
 }
+
+button:hover{
+  background-color: rgba(255, 255, 255, 0.1);
+  color: green;
+}
