--- a/src/app/nw-vote/nw-vote.component.html
+++ b/src/app/nw-vote/nw-vote.component.html
@@ -23,7 +23,7 @@
                     <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
                         <button *ngIf="!positiveVote && !readOnlyName && name !== '....'" (click)="setPositive()" type="button"
-                            class="btn btn-outline-success btn-lg mat-elevation-z8" style="width: 260px;">
+                            class="btn btn-outline-success btn-lg mat-elevation-z8 buttons-positive" style="width: 260px;">
                             POSITIVE
                         </button>
                         <button *ngIf="positiveVote && !readOnlyName && name !== '....'" (click)="setPositive()" type="button"
@@ -45,8 +45,8 @@
                 <div class="col-md-12">
                     <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
-                        <button *ngIf="!neutralVote  && !readOnlyName   && name !== '....'" (click)="setNeutral()" type="button"
-                            class="btn btn-outline-primary btn-lg mat-elevation-z8" style="width: 260px ">
+                        <button  *ngIf="!neutralVote  && !readOnlyName   && name !== '....'" (click)="setNeutral()" type="button"
+                            class="btn btn-outline-primary btn-lg mat-elevation-z8 buttons-neutral" style="width: 260px ">
                             NEUTRAL
                         </button>
                         <button *ngIf="neutralVote  && !readOnlyName  && name !== '....'" (click)="setNeutral()" type="button"
@@ -66,8 +66,8 @@
                 <div class="col-md-12">
                     <section class="text-center " style="padding: 35px 0px 31px 0px;">
 
-                        <button *ngIf="!negativeVote  && !readOnlyName  && name !== '....'" (click)="setNegative()" type="button"
-                            class="btn btn-outline-danger btn-lg mat-elevation-z8" style="width: 260px;">
+                        <button  *ngIf="!negativeVote  && !readOnlyName  && name !== '....'" (click)="setNegative()" type="button"
+                            class="btn btn-outline-danger btn-lg mat-elevation-z8 buttons-negative" style="width: 260px;">
                             NEGATIVE
                         </button>
                         <button *ngIf="negativeVote  && !readOnlyName  && name !== '....'" (click)="setNegative()" type="button"
