--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,7 +8,7 @@
 
             <img class="logo" src="assets/img/bi-logo-with-tagline.svg">
 
-            <div class="mat-subheading-1 secondary-text">Welcome to the Name Vote </div>
+            <div class="mat-subheading-1 secondary-text">Welcome to NameVote </div>
 
             <form name="loginForm" [formGroup]="loginForm" novalidate class="open-close-container">
 
