--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -7,7 +7,7 @@
 
         <div class="col-sm">
 
-            <mat-toolbar class="toolbar">BI Project: {{projectname}}</mat-toolbar>
+            <mat-toolbar class="toolbar ">BI Project: {{projectname}}</mat-toolbar>
             <div *ngIf="!isUserLogged" id="login" fxLayout="column">
 
                 <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
@@ -85,7 +85,7 @@
                 <div class="mat-subheading-1">Suggestions</div>
                 <mat-card style="height: 300px;overflow-y: scroll;">
                     
-                    <div *ngFor="let item of  newNames" (click)="openDialog()">{{item}}</div>
+                    <div *ngFor="let item of  newNames" (click)="openDialog(item.name)">{{item.name}}</div>
                 </mat-card>
 
                 <form name="loginForm" [formGroup]="loginForm" novalidate class="nameform">
