--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -6,56 +6,50 @@
             <div class="presentation-box" [style]="slideBackground">
 
                 <mat-toolbar class="toolbar mat-elevation-z4">
-                    <!-- <div class="row">
-                        <div class="col-md-1">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-                        </div>
-                        <div class="col-md-1">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">lightbulb_outline</mat-icon>
-                        </div>
-                        <div class="col-md-2">
-                            <input class="search" placeholder="search" type="text">
-                        </div>                        
-                        <div class="col-md-1">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">chevron_left</mat-icon>
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">chevron_right</mat-icon>
-                        </div>
-                        <div class="col-md-1">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">comment</mat-icon>
-                        </div>
-                        <div class="col-md-1">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">phone_iphone</mat-icon>
-                        </div>
-                        <div class="col-md-1">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">import_contacts</mat-icon>
-                        </div>
-                        <div class="col-md-1">
-                         <div style="font-size: 13px;"> Proprietary & Confidential</div>
-                        </div>
-                        <div class="col-md-1">
-                          30/40                       
-                        </div>
-                        <div class="col-md-1">
-                            <mat-icon aria-hidden="false" aria-label="Example home icon">help</mat-icon>                         
-                        </div>
-                    </div> -->
-                    <div class="example-button-row">
+
                         <button mat-icon-button aria-label="Example icon-button with a heart icon">
-                          <mat-icon>favorite</mat-icon>
+                          <mat-icon>home</mat-icon>
                         </button>
+
                         <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
-                          <mat-icon>favorite</mat-icon>
+                          <mat-icon>lightbulb_outline</mat-icon>
                         </button>
+
+                        <input class="search" placeholder="search" type="text">
+                        
                         <button mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
-                          <mat-icon>favorite</mat-icon>
+                          <mat-icon>chevron_left</mat-icon>
                         </button>
+
                         <button mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
-                          <mat-icon>favorite</mat-icon>
+                          <mat-icon>chevron_right</mat-icon>
                         </button>
-                        <button mat-icon-button disabled aria-label="Example icon-button with a heart icon">
-                          <mat-icon>favorite</mat-icon>
+
+                        <button mat-icon-button aria-label="Example icon-button with a heart icon">
+                          <mat-icon>comment</mat-icon>
                         </button>
-                      </div>
+
+                        <button mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
+                          <mat-icon>phone_iphone</mat-icon>
+                        </button>
+
+                      
+                        <button mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
+                          <mat-icon>import_contacts</mat-icon>
+                        </button>
+
+                        <button mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
+                          Proprietary & Confidential
+                        </button>
+
+                        <button mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
+                          10/40
+                        </button>
+
+                        <button mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
+                          <mat-icon>help</mat-icon>
+                        </button>                          
+                        
                 </mat-toolbar>
             </div>
         </div>
