--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -13,14 +13,14 @@
 
     <div class="row">
         <div class="col-sm">
-            <button (click)="submitCredentials()" mat-raised-button style="color: white;" color="primary"
+            <button (click)="buttonOption('save')" mat-raised-button style="color: white;" color="primary"
                 class="submit-button" aria-label="LOG IN">
                 SAVE
             </button>
         </div>
         <div class="col-sm">
 
-            <button (click)="submitCredentials()" mat-raised-button style="color: white;" color="accent"
+            <button (click)="buttonOption('delete')" mat-raised-button style="color: white;" color="accent"
                 class="submit-button" aria-label="LOG IN">
                 DELETE
             </button>
