--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -24,7 +24,7 @@
             padding: 32px;
 
             #login-form {
-                padding: 32px;
+                // padding: 32px;
                 background: #ffffff;
                 text-align: center;
 
